--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Author" content="Ayush Chandra">
+    <meta name="discription" content="Weather Forecast, Weather app, get weather details">
+    <meta name="content" content="City weather ,temperature , Humidity , WindSpeed , current-weather">
     <title>Weather</title>
     <link rel="stylesheet" href="style.css">
     <script src="brain.js" defer></script>
